FIX: added padding-right to .btn on 06-base mobile layout, fixed the scrolling issue on mobile screens in challenge 7

--- a/06-base/style.css
+++ b/06-base/style.css
@@ -124,6 +124,8 @@ main::before {
 .cta .email .btn {
   width: 6em;
   height: 4em;
+  min-width: 6em;
+
   background-image: url(./images/icon-arrow.svg), var(--gradient-btn);
   background-repeat: no-repeat;
   background-position: center;
@@ -132,9 +134,9 @@ main::before {
   border: 0 none;
   cursor: pointer;
   padding-bottom: 1em;
+  padding-right: 1em;
   box-shadow: 0 10px 20px var(--clr-fg), 0 6px 6px var(--clr-fg);
 
-  min-width: 6em;
   transform: translate(-50%, 0%);
   outline: none;
 }
