--- a/07-single-price-grid/style.css
+++ b/07-single-price-grid/style.css
@@ -54,14 +54,12 @@ body {
   background-color: var(--clr-bg-body);
 
   width: 100vw;
-  height: 100vh;
   margin: 0;
-  overflow: hidden;
 }
 
 main {
   width: 90%;
-  margin: 0 auto;
+  margin: 3rem auto;
 }
 
 /* -- Special Price Grid Card -- */
@@ -171,6 +169,15 @@ main {
 /* -- Media Queries -- */
 
 @media (min-width: 600px) {
+  body {
+    height: 100vh;
+    overflow: hidden;
+  }
+
+  main {
+    margin: 0;
+  }
+
   .spg-card {
     --padding: var(--fs-250);
 
